registry/golang-http/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-http
  namespace: ns-golang-http
  labels:
    app: golang-http
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-http
  template:
    metadata:
      labels:
        app: golang-http
    spec:
      containers:
        - name: golang-http
          image: registry.hendrywilliam.com/golang-http:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
        - name: curl
          image: curlimages/curl:latest
          command:
            - /bin/sh
            - -c
            - "while true; do curl -s http://localhost:8080; sleep 10; done"
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
