registry/golang-http/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-http-svc
  namespace: ns-golang-http
  labels:
    app: golang-http
spec:
  type: ClusterIP
  selector:
    app: golang-http
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
