registry/golang-http/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-http-ingress
  namespace: ns-golang-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: prod
  tls:
    - hosts:
        - golang-http.hendrywilliam.com
      secretName: letsencrypt-prod
  rules:
    - host: golang-http.hendrywilliam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang-http-svc
                port:
                  number: 80
